008-07-15  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* arch/win32/kbd.c: In kbd_handle_keydown() and
	kbd_handle_keyup(), filter out keystrokes if the happen because
	of key autorepeat of Windows.

2008-07-15  Hannu Nuotio  <hannu.nuotio@tut.fi>

	* arch/unix/x11/gnome/uipalcontrol.c: Removed "Emulation" from
	radio button texts. Fixes single size window stretching.

2008-07-15  Hannu Nuotio  <hannu.nuotio@tut.fi>

	* c64/c64keyboard.c: Changed Restore to ignore key release and
	automatically clear the NMI. Fixes "nmitest" (bug 2016657).

2008-07-15  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* arch/unix/skyos/make-bindist.sh: Reverted back to what worked
	before.

2008-07-13  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.26

2008-07-12  Andreas Matthies  <andreas.matthies@gmx.net>

	* vicii/vicii-fetch.c, vicii/vicii_fetch.h: vicii_fetch_matrix
	now gets the cycle and uses it to change xsmooth_color in time.
	This fixes bug in Crest/Krestage multiplexer crunchtable.
	
	* vicii/vicii-draw.c (draw_mc_bitmap_foreground): Change from
	VICII_ILLEGAL_TEXT_MODE is handled now. This fixes bug in
	Crest/Digital Magic.
	
	* vicii/vicii-mem.c (d015_store): Force a DMA check even on
	last_dma_line. This fixes bug in Oregon/Maulhalten.
	
	* vicii/vicii-sprites.c (vicii_sprites_set_x_position): Another
	fix to make Cosmos Design/Living Chips happy. This is not the
	end of the story...

2008-07-12  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* arch/amigaos/README.AMIGA: Updated.

	* arch/unix/gp2x/make-bindist.sh,
	arch/unix/sco_sol/make-bindist.sh: Fixed a typo.

2008-07-13  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* c64/reu.c: Fixed the end of transfer length when doing a
	compare.

2008-07-12  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* arch/unix/x11/gnome/x11ui.c: removed weird unicode character
	from a commentary in ui_open_canvas_window().

	* c64/reu.c: Fixed a bug with transfer and swap file operations